# espnetlink-fw

./: .gitignore  CMakeLists.txt  Kconfig.projbuild  README.md  espnetlink_partitions_table.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/config_manager/: CMakeLists.txt  config_manager.c  config_manager_console.c  config_schema.c
components/config_manager/include/: config_manager.h  config_schema.h
components/config_manager/test/: CMakeLists.txt  test_config_manager.c
components/filesystem/: CMakeLists.txt  filesystem.c
components/filesystem/include/: filesystem.h
components/gps/: CMakeLists.txt  agnss.c  agnss_console.c  agnss_internal.h  agnss_nvs.c  gps.c
components/gps/include/: gps.h
components/hw_config/: CMakeLists.txt
components/hw_config/include/: hw_config.h
components/imu/: CMakeLists.txt  imu.c
components/imu/include/: imu.h
components/lte_upstream_pppos/: CMakeLists.txt  lte_upstream_pppos.c  lte_upstream_pppos_usb.cpp
components/lte_upstream_pppos/include/: lte_upstream_pppos.h  lte_upstream_pppos_usb.h
components/modem_manager/: CMakeLists.txt  modem_manager.c
components/modem_manager/include/: modem_manager.h
components/usb_cdc_host_manager/: CMakeLists.txt
components/usb_cdc_host_manager/include/: usb_cdc_host_manager.h  usb_cdc_uart_bridge.h
components/usb_cdc_host_manager/src/: usb_cdc_host_manager.cpp  usb_cdc_uart_bridge.cpp
components/usb_cli_console/: CMakeLists.txt  usb_cli_commands.c  usb_cli_console.c
components/usb_cli_console/include/: usb_cli_commands.h  usb_cli_console.h
components/usb_dev_bridge/: CMakeLists.txt  usb_descriptors.c
components/usb_dev_bridge/include/: tusb_config.h
components/usb_dev_descriptors/: CMakeLists.txt  usb_dev_descriptors.c
components/usb_dev_descriptors/include/: usb_dev_descriptors.h
components/usb_dev_ethernet/: CMakeLists.txt  usb_dev_ethernet.c  usb_dev_ethernet_rndis.c  usbnet_dhcp_debug.c  usbnet_dns_proxy.c  usbnet_lwip.c  usbnet_state.c  usbnet_usb.c
components/usb_dev_ethernet/include/: usb_dev_ethernet.h
components/usb_dev_ethernet/private/: usbnet_dhcp_debug.h  usbnet_dns_proxy.h  usbnet_lwip.h  usbnet_state.h  usbnet_usb.h
main/: CMakeLists.txt  hw_config.h  idf_component.yml  main.c  tusb_config.h  usb_dev_bridge.c  usb_dev_bridge.h
test_app/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
test_app/main/: CMakeLists.txt  test_main.c
